...
internal fun DrawNewLayoutPreview() {
    MaterialTheme {
        DrawContent(
            uiState = DrawUiState(
                isDrawn = true,
                results = mapOf(
                    "Bruno" to "Carlos", "Carlos" to "Alice", "Alice" to "Bruno"
                ),
                members = listOf(
                    UserModel(name = "Bruno"),
                    UserModel(name = "Carlos"),
                    UserModel(name = "Alice")
                )
...
