appId: br.com.brunocarvalhs.friendssecrets
name: Settings Flow
---
- launchApp
- tapOn: "More options"
- tapOn: "Settings"

- assertVisible: "General"
- assertVisible: "Appearance"
- assertVisible: "Review App"
- assertVisible: "Legal"
- assertVisible: "Privacy Policy"
- assertVisible: "Terms and Conditions"

- tapOn: "Appearance"
- assertVisible: "Appearance"
- assertVisible: "Light theme"
- assertVisible: "Dark theme"
- assertVisible: "System theme"
- assertVisible: "Dynamic Theme"
- back

- tapOn: "Review App"
- back

- tapOn: "Privacy Policy"
- back

- tapOn: "Terms and Conditions"
- back